# WachSam-Krisenradar

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LESSONS.md  README.md
docs/: brand.md  (+23 more)
v02/intelligence/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  source_registry.yaml
v02/intelligence/src/: config.py  db.py  editorial_alerts.py  evidence.py  freshness.py  gate.py  main.py  models.py  plausibility_rules.py  relevance_gate.py  source_health.py  validation.py
v02/intelligence/src/adapters/: arbeitslosigkeit.py  base.py  bip.py  bnetza.py  destatis.py  dwd.py  eia.py  eurostat.py  ezbleitzins.py  fao.py  fred.py  insolvenzen.py  nina.py  pegelonline.py  staatsschulden.py  tankerkoenig.py  warning_indicators.py
v02/intelligence/src/analysis/: __init__.py  lag_engine.py
v02/intelligence/src/crawler/: rss_crawler.py
v02/intelligence/src/extractors/: llm_extractor.py  prompts.py
v02/intelligence/src/fetchers/: article_fetcher.py
v02/intelligence/src/queue/: editorial_queue.py
v02/intelligence/src/research_agent/: __init__.py  agent.py  tools.py
v02/intelligence/tests/: conftest.py  test_adapters.py  test_article_fetcher.py  test_db.py  test_dry_run.py  test_editorial_alerts.py  test_editorial_queue.py  test_evidence.py  test_freshness.py  test_gate.py  test_integration.py  test_lag_engine.py  test_llm_extractor.py  test_main.py  test_models.py  test_relevance_gate.py  test_research_agent.py  test_rss_crawler.py  test_source_errors.py  test_source_health.py  test_source_registry.py  test_source_stand.py  test_validation.py
(+394 files in other folders)
