[project]
name = "wachsam-intelligence"
version = "0.1.0"
description = "WachSam Intelligence Pipeline — Structured Ingestion + LLM Analysis"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pandas>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "feedparser>=6.0,<7.0",
    "psycopg2-binary>=2.9,<3.0",
    "apscheduler>=3.10,<4.0",
    "google-genai>=1.33,<2.0",
    "pyyaml>=6.0,<7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live-Tests berühren echte externe APIs und sind in CI flaky (Timeouts).
# Standardmäßig ausgeschlossen ("not live"); die gemockte Suite läuft so stabil.
# Manueller Live-Lauf: `python -m pytest -m live` (überschreibt das Default-Filter).
addopts = "-m 'not live'"
markers = [
    "live: berührt echte externe APIs — nicht in der PR-CI, nur manuell (`pytest -m live`)",
]
